--- a/mountains/index.html
+++ b/mountains/index.html
@@ -8,12 +8,13 @@
     <title>Mountains</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="/navbar.css">
+    <link rel="stylesheet" href="/navbar.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="/mountains/mountains.js"></script>
-    <script src="/scripts/mountainData.js"></script>
+    <script defer src="./mountain.js"></script>
+    <script defer src="../scripts/mountainData.js"></script>
+    <link rel="stylesheet" href="../mountains/mountains.css">
 
 
 </head>
@@ -33,16 +34,26 @@
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/nationalpark/">Visit a Park!</a></li>
-                <li><a href="/mountains/">Mountain Information</a></li>
-                <!-- <li><a href="/userregistration/">Sign Up</a></li>
-                <li><a href="/contactus/">Contact Us</a></li> -->
+                <li><a href="/mountains/"> Mountain Information</a></li>
+                <li><a href="/userregistration/">News</a></li>
+                <li><a href="/contactus/">Get Involved</a></li>
                 <li><a href=""><button class="donate-button" type="button">Donate</button></a></li>
             </ul>
+
         </nav>
     </h1>
- <select name="selectMountain" id="selectMountain">
-    <option value="default">Select Mountain</option>
- </select>
+    <h2>Planning a visit to visit the mountains?<br>Browse our information to plan a visit to enjoy the breath taking
+        <br> with your family and friends. </h2>
+    <div class="custom-select">
+        <select class="mountain" name="mountain" id="mountain">
+            <option value="">Select Mountain</option>
+        </select>
+    </div>
+    <div>
+        <main id="main"></main>
+    </div>
+
+
 </body>
 
 </html>
