better naming of the variable for the select menu

--- a/mountains/index.html
+++ b/mountains/index.html
@@ -45,7 +45,7 @@
     <h2>Planning a visit to visit the mountains?<br>Browse our information to plan a visit to enjoy the breath taking
         <br> with your family and friends. </h2>
     <div class="custom-select">
-        <select class="mountain" name="mountain" id="mountain">
+        <select class="select-mountain" name="mountain" id="mountainselect">
             <option value="">Select Mountain</option>
         </select>
     </div>
